// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Admin manage users Undelete user 1`] = `
<body
  class=""
>
  <div>
    <div>
      <div
        class="Toastify"
      />
      <div
        class="prime-home flex-1"
      >
        <div
          class="grid-container"
        >
          <div
            class="prime-container card-container padding-bottom-3"
          >
            <div
              class="usa-card__header"
            >
              <div
                class="width-full"
              >
                <div
                  class="display-flex flex-align-center"
                >
                  <svg
                    aria-hidden="true"
                    class="usa-icon text-base margin-left-neg-2px"
                    focusable="false"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                    />
                  </svg>
                  <a
                    class="margin-left-05"
                    href="/admin"
                  >
                    Support admin
                  </a>
                </div>
                <div
                  class="grid-row width-full margin-top-1"
                >
                  <h1
                    class="desktop:grid-col-fill tablet:grid-col-fill mobile:grid-col-12 font-heading-lg margin-bottom-0"
                  >
                    Manage users
                  </h1>
                  <div
                    class="desktop:grid-col-auto tablet:grid-col-auto mobile:grid-col-12 margin-top-2 tablet:margin-top-0"
                  >
                    <button
                      aria-disabled="false"
                      aria-label="Clear user search"
                      class="usa-button"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-sliders margin-right-1"
                        data-icon="sliders"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 416c0 17.7 14.3 32 32 32l54.7 0c12.3 28.3 40.5 48 73.3 48s61-19.7 73.3-48L480 448c17.7 0 32-14.3 32-32s-14.3-32-32-32l-246.7 0c-12.3-28.3-40.5-48-73.3-48s-61 19.7-73.3 48L32 384c-17.7 0-32 14.3-32 32zm128 0a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zM320 256a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm32-80c-32.8 0-61 19.7-73.3 48L32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l246.7 0c12.3 28.3 40.5 48 73.3 48s61-19.7 73.3-48l54.7 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-54.7 0c-12.3-28.3-40.5-48-73.3-48zM192 128a32 32 0 1 1 0-64 32 32 0 1 1 0 64zm73.3-64C253 35.7 224.8 16 192 16s-61 19.7-73.3 48L32 64C14.3 64 0 78.3 0 96s14.3 32 32 32l86.7 0c12.3 28.3 40.5 48 73.3 48s61-19.7 73.3-48L480 128c17.7 0 32-14.3 32-32s-14.3-32-32-32L265.3 64z"
                          fill="currentColor"
                        />
                      </svg>
                      Clear filters
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="bg-base-lightest padding-left-3 padding-right-3 padding-bottom-1"
              role="search"
            >
              <div
                class="grid-row grid-gap padding-top-2 padding-bottom-1 flex-align-end"
              >
                <div
                  class="desktop:grid-col-4 tablet:grid-col-4 mobile:grid-col-1"
                >
                  <div
                    class="prime-search-container"
                  >
                    <form
                      class="usa-search usa-search--small prime-search-input display-inline-block"
                      role="search"
                    >
                      <label
                        class="display-block"
                        for="search-field-small"
                      >
                        Search by email address of user
                      </label>
                      <div>
                        <input
                          autocomplete="off"
                          class="usa-input"
                          id="search-field-small"
                          name="search"
                          placeholder="email@example.com"
                          type="search"
                          value="ben@example.com"
                        />
                        <button
                          class="usa-button"
                          type="submit"
                        >
                          <img
                            alt="Search"
                            class="usa-search__submit-icon"
                            src="search--white.svg"
                          />
                        </button>
                      </div>
                    </form>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-live="polite"
            class="prime-container card-container manage-users-card"
          >
            <div
              class="usa-card__body"
            >
              <div
                class="tablet:grid-col padding-left-3 user-detail-column"
              >
                <div>
                  <h2
                    class="display-inline-block margin-top-1 margin-bottom-0 user-name-header"
                  >
                    Barnes, Ben Billy
                  </h2>
                  <div
                    class="user-status-subheader"
                  >
                    <svg>
                      account-deactivated.svg
                    </svg>
                    <span
                      class="top-user-status"
                    >
                      Account deleted
                    </span>
                  </div>
                </div>
                <div
                  class="user-header grid-row flex-row flex-align-center"
                >
                  <div
                    class="status-tagline margin-top-105"
                  >
                    This user no longer has access to SimpleReport. Click the
                     
                    <span
                      class="text-bold"
                    >
                      Undelete user
                    </span>
                     button to restore this account
                  </div>
                  <button
                    aria-disabled="false"
                    class="usa-button usa-button--outline margin-left-auto margin-bottom-1"
                    type="button"
                  >
                    Undelete user
                  </button>
                </div>
                <div
                  aria-label="Alert: No facility assigned"
                  class="usa-alert usa-alert--warning"
                  role="region"
                >
                  <div
                    class="usa-alert__body"
                  >
                    <div
                      class="usa-alert__heading text-bold"
                    >
                      No facility assigned
                    </div>
                    <div
                      class="usa-alert__text"
                    >
                      All users must have access to at least one facility
                    </div>
                  </div>
                </div>
                <nav
                  aria-label="Manage user navigation"
                  class="prime-secondary-nav margin-top-4 padding-bottom-0"
                >
                  <div
                    aria-owns="userinformation-tab orgaccess-tab"
                    class="usa-nav__secondary-links prime-nav usa-list"
                    role="tablist"
                  >
                    <div
                      class="usa-nav__secondary-item usa-current"
                    >
                      <button
                        aria-selected="true"
                        class="usa-button--unstyled text-ink text-no-underline cursor-pointer"
                        id="userinformation-tab"
                        role="tab"
                      >
                        User information
                      </button>
                    </div>
                    <div
                      class="usa-nav__secondary-item "
                    >
                      <button
                        aria-selected="false"
                        class="usa-button--unstyled text-ink text-no-underline cursor-pointer"
                        id="organizationaccess-tab"
                        role="tab"
                      >
                        Organization access
                      </button>
                    </div>
                  </div>
                </nav>
                <div
                  aria-labelledby="userinformation-tab"
                  class="padding-left-1"
                  role="tabpanel"
                >
                  <h3
                    class="basic-info-header"
                  >
                    Basic information
                  </h3>
                  <div
                    class="user-header grid-row flex-row flex-align-center disabled-dark"
                  >
                    <div>
                      <div
                        class="userinfo-subheader"
                      >
                        Name
                      </div>
                      <p
                        class="userinfo-text"
                      >
                        Ben Billy Barnes
                      </p>
                    </div>
                    <button
                      aria-disabled="true"
                      class="usa-button usa-button--outline usa-button-disabled margin-left-auto margin-bottom-1"
                      disabled=""
                      type="button"
                    >
                      Edit name
                    </button>
                  </div>
                  <div
                    class="user-header grid-row flex-row flex-align-center disabled-dark"
                  >
                    <div>
                      <div
                        class="userinfo-subheader"
                      >
                        Email
                      </div>
                      <p
                        class="userinfo-text"
                      >
                        ben@example.com
                      </p>
                    </div>
                    <button
                      aria-disabled="true"
                      class="usa-button usa-button--outline usa-button-disabled margin-left-auto margin-bottom-1"
                      disabled=""
                      type="button"
                    >
                      Edit email
                    </button>
                  </div>
                  <div
                    class="sr-separator-line margin-left-neg-4 margin-right-neg-2"
                  />
                  <h3
                    class="user-controls-header"
                  >
                    User controls
                  </h3>
                  <div
                    class="user-header grid-row flex-row flex-align-center disabled-dark"
                  >
                    <div
                      class="grid-col margin-right-8"
                    >
                      <div
                        class="userinfo-subheader"
                      >
                        Password
                      </div>
                      <p
                        class="usercontrols-text"
                      >
                        Send a link to reset user password. Users must answer a password recovery question to access their account.
                      </p>
                    </div>
                    <button
                      aria-disabled="true"
                      class="usa-button usa-button--outline usa-button-disabled margin-left-auto margin-bottom-1"
                      disabled=""
                      type="button"
                    >
                      Send password reset email
                    </button>
                  </div>
                  <div
                    class="user-header grid-row flex-row flex-align-center disabled-dark"
                  >
                    <div
                      class="grid-col"
                    >
                      <div
                        class="userinfo-subheader"
                      >
                        Reset multi-factor authentication (MFA)
                      </div>
                      <p
                        class="usercontrols-text"
                      >
                        Reset user MFA account access settings
                      </p>
                    </div>
                    <button
                      aria-disabled="true"
                      class="usa-button usa-button--outline usa-button-disabled margin-left-auto margin-bottom-1"
                      disabled=""
                      type="button"
                    >
                      Reset MFA
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="modal--basic"
  />
  <div
    class="modal--basic"
  />
</body>
`;

exports[`Admin manage users Undelete user 2`] = `
<body
  class="ReactModal__Body--open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div>
    <div>
      <div
        class="Toastify"
      />
      <div
        class="prime-home flex-1"
      >
        <div
          class="grid-container"
        >
          <div
            class="prime-container card-container padding-bottom-3"
          >
            <div
              class="usa-card__header"
            >
              <div
                class="width-full"
              >
                <div
                  class="display-flex flex-align-center"
                >
                  <svg
                    aria-hidden="true"
                    class="usa-icon text-base margin-left-neg-2px"
                    focusable="false"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                    />
                  </svg>
                  <a
                    class="margin-left-05"
                    href="/admin"
                  >
                    Support admin
                  </a>
                </div>
                <div
                  class="grid-row width-full margin-top-1"
                >
                  <h1
                    class="desktop:grid-col-fill tablet:grid-col-fill mobile:grid-col-12 font-heading-lg margin-bottom-0"
                  >
                    Manage users
                  </h1>
                  <div
                    class="desktop:grid-col-auto tablet:grid-col-auto mobile:grid-col-12 margin-top-2 tablet:margin-top-0"
                  >
                    <button
                      aria-disabled="false"
                      aria-label="Clear user search"
                      class="usa-button"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-sliders margin-right-1"
                        data-icon="sliders"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 416c0 17.7 14.3 32 32 32l54.7 0c12.3 28.3 40.5 48 73.3 48s61-19.7 73.3-48L480 448c17.7 0 32-14.3 32-32s-14.3-32-32-32l-246.7 0c-12.3-28.3-40.5-48-73.3-48s-61 19.7-73.3 48L32 384c-17.7 0-32 14.3-32 32zm128 0a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zM320 256a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm32-80c-32.8 0-61 19.7-73.3 48L32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l246.7 0c12.3 28.3 40.5 48 73.3 48s61-19.7 73.3-48l54.7 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-54.7 0c-12.3-28.3-40.5-48-73.3-48zM192 128a32 32 0 1 1 0-64 32 32 0 1 1 0 64zm73.3-64C253 35.7 224.8 16 192 16s-61 19.7-73.3 48L32 64C14.3 64 0 78.3 0 96s14.3 32 32 32l86.7 0c12.3 28.3 40.5 48 73.3 48s61-19.7 73.3-48L480 128c17.7 0 32-14.3 32-32s-14.3-32-32-32L265.3 64z"
                          fill="currentColor"
                        />
                      </svg>
                      Clear filters
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="bg-base-lightest padding-left-3 padding-right-3 padding-bottom-1"
              role="search"
            >
              <div
                class="grid-row grid-gap padding-top-2 padding-bottom-1 flex-align-end"
              >
                <div
                  class="desktop:grid-col-4 tablet:grid-col-4 mobile:grid-col-1"
                >
                  <div
                    class="prime-search-container"
                  >
                    <form
                      class="usa-search usa-search--small prime-search-input display-inline-block"
                      role="search"
                    >
                      <label
                        class="display-block"
                        for="search-field-small"
                      >
                        Search by email address of user
                      </label>
                      <div>
                        <input
                          autocomplete="off"
                          class="usa-input"
                          id="search-field-small"
                          name="search"
                          placeholder="email@example.com"
                          type="search"
                          value="ben@example.com"
                        />
                        <button
                          class="usa-button"
                          type="submit"
                        >
                          <img
                            alt="Search"
                            class="usa-search__submit-icon"
                            src="search--white.svg"
                          />
                        </button>
                      </div>
                    </form>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-live="polite"
            class="prime-container card-container manage-users-card"
          >
            <div
              class="usa-card__body"
            >
              <div
                class="tablet:grid-col padding-left-3 user-detail-column"
              >
                <div>
                  <h2
                    class="display-inline-block margin-top-1 margin-bottom-0 user-name-header"
                  >
                    Barnes, Ben Billy
                  </h2>
                  <div
                    class="user-status-subheader"
                  >
                    <svg>
                      account-deactivated.svg
                    </svg>
                    <span
                      class="top-user-status"
                    >
                      Account deleted
                    </span>
                  </div>
                </div>
                <div
                  class="user-header grid-row flex-row flex-align-center"
                >
                  <div
                    class="status-tagline margin-top-105"
                  >
                    This user no longer has access to SimpleReport. Click the
                     
                    <span
                      class="text-bold"
                    >
                      Undelete user
                    </span>
                     button to restore this account
                  </div>
                  <button
                    aria-disabled="false"
                    class="usa-button usa-button--outline margin-left-auto margin-bottom-1"
                    type="button"
                  >
                    Undelete user
                  </button>
                </div>
                <div
                  aria-label="Alert: No facility assigned"
                  class="usa-alert usa-alert--warning"
                  role="region"
                >
                  <div
                    class="usa-alert__body"
                  >
                    <div
                      class="usa-alert__heading text-bold"
                    >
                      No facility assigned
                    </div>
                    <div
                      class="usa-alert__text"
                    >
                      All users must have access to at least one facility
                    </div>
                  </div>
                </div>
                <nav
                  aria-label="Manage user navigation"
                  class="prime-secondary-nav margin-top-4 padding-bottom-0"
                >
                  <div
                    aria-owns="userinformation-tab orgaccess-tab"
                    class="usa-nav__secondary-links prime-nav usa-list"
                    role="tablist"
                  >
                    <div
                      class="usa-nav__secondary-item usa-current"
                    >
                      <button
                        aria-selected="true"
                        class="usa-button--unstyled text-ink text-no-underline cursor-pointer"
                        id="userinformation-tab"
                        role="tab"
                      >
                        User information
                      </button>
                    </div>
                    <div
                      class="usa-nav__secondary-item "
                    >
                      <button
                        aria-selected="false"
                        class="usa-button--unstyled text-ink text-no-underline cursor-pointer"
                        id="organizationaccess-tab"
                        role="tab"
                      >
                        Organization access
                      </button>
                    </div>
                  </div>
                </nav>
                <div
                  aria-labelledby="userinformation-tab"
                  class="padding-left-1"
                  role="tabpanel"
                >
                  <h3
                    class="basic-info-header"
                  >
                    Basic information
                  </h3>
                  <div
                    class="user-header grid-row flex-row flex-align-center disabled-dark"
                  >
                    <div>
                      <div
                        class="userinfo-subheader"
                      >
                        Name
                      </div>
                      <p
                        class="userinfo-text"
                      >
                        Ben Billy Barnes
                      </p>
                    </div>
                    <button
                      aria-disabled="true"
                      class="usa-button usa-button--outline usa-button-disabled margin-left-auto margin-bottom-1"
                      disabled=""
                      type="button"
                    >
                      Edit name
                    </button>
                  </div>
                  <div
                    class="user-header grid-row flex-row flex-align-center disabled-dark"
                  >
                    <div>
                      <div
                        class="userinfo-subheader"
                      >
                        Email
                      </div>
                      <p
                        class="userinfo-text"
                      >
                        ben@example.com
                      </p>
                    </div>
                    <button
                      aria-disabled="true"
                      class="usa-button usa-button--outline usa-button-disabled margin-left-auto margin-bottom-1"
                      disabled=""
                      type="button"
                    >
                      Edit email
                    </button>
                  </div>
                  <div
                    class="sr-separator-line margin-left-neg-4 margin-right-neg-2"
                  />
                  <h3
                    class="user-controls-header"
                  >
                    User controls
                  </h3>
                  <div
                    class="user-header grid-row flex-row flex-align-center disabled-dark"
                  >
                    <div
                      class="grid-col margin-right-8"
                    >
                      <div
                        class="userinfo-subheader"
                      >
                        Password
                      </div>
                      <p
                        class="usercontrols-text"
                      >
                        Send a link to reset user password. Users must answer a password recovery question to access their account.
                      </p>
                    </div>
                    <button
                      aria-disabled="true"
                      class="usa-button usa-button--outline usa-button-disabled margin-left-auto margin-bottom-1"
                      disabled=""
                      type="button"
                    >
                      Send password reset email
                    </button>
                  </div>
                  <div
                    class="user-header grid-row flex-row flex-align-center disabled-dark"
                  >
                    <div
                      class="grid-col"
                    >
                      <div
                        class="userinfo-subheader"
                      >
                        Reset multi-factor authentication (MFA)
                      </div>
                      <p
                        class="usercontrols-text"
                      >
                        Reset user MFA account access settings
                      </p>
                    </div>
                    <button
                      aria-disabled="true"
                      class="usa-button usa-button--outline usa-button-disabled margin-left-auto margin-bottom-1"
                      disabled=""
                      type="button"
                    >
                      Reset MFA
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="modal--basic"
  >
    <div
      class="ReactModal__Overlay prime-modal-overlay display-flex flex-align-center flex-justify-center"
    >
      <div
        aria-label="Undelete Barnes, Ben Billy"
        aria-modal="true"
        class="ReactModal__Content"
        role="dialog"
        style="position: initial; top: 40px; left: 40px; right: 40px; bottom: 40px; border: 0px; background: rgb(255, 255, 255); overflow: auto; border-radius: 4px; outline: none; padding: 0px;"
        tabindex="-1"
      >
        <div
          class="modal__container"
        >
          <button
            class="modal__close-button"
            style="cursor: pointer; z-index: 1;"
          >
            <img
              alt="Close"
              class="modal__close-img"
              src="close.svg"
            />
          </button>
          <main
            class="padding-205"
          >
            <div
              class="modal__content grid-row usa-prose"
            >
              <div
                class="grid-col"
              >
                <h1
                  class="modal__heading font-heading-lg margin-top-0 margin-bottom-205"
                >
                  Undelete Barnes, Ben Billy
                </h1>
                <div
                  class="border-top border-base-lighter margin-x-neg-205"
                />
                <p
                  class="margin-top-4"
                >
                  This user will regain access to the organization and facilities they were previously assigned to.
                </p>
                <div
                  class="border-top border-base-lighter margin-x-neg-205"
                />
                <div
                  class="modal__footer display-flex flex-justify-end margin-top-205"
                >
                  <button
                    class="usa-button usa-button--unstyled margin-right-205"
                    type="button"
                  >
                    No, go back
                  </button>
                  <button
                    class="usa-button margin-right-0"
                    type="button"
                  >
                    Yes, undelete user
                  </button>
                </div>
              </div>
            </div>
          </main>
        </div>
      </div>
    </div>
  </div>
  <div
    class="modal--basic"
  />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
</body>
`;

exports[`Admin manage users search error displays generic error 1`] = `
<body>
  <div>
    <div>
      <div
        class="Toastify"
      />
      <div
        class="prime-home flex-1"
      >
        <div
          class="grid-container"
        >
          <div
            class="prime-container card-container padding-bottom-3"
          >
            <div
              class="usa-card__header"
            >
              <div
                class="width-full"
              >
                <div
                  class="display-flex flex-align-center"
                >
                  <svg
                    aria-hidden="true"
                    class="usa-icon text-base margin-left-neg-2px"
                    focusable="false"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                    />
                  </svg>
                  <a
                    class="margin-left-05"
                    href="/admin"
                  >
                    Support admin
                  </a>
                </div>
                <div
                  class="grid-row width-full margin-top-1"
                >
                  <h1
                    class="desktop:grid-col-fill tablet:grid-col-fill mobile:grid-col-12 font-heading-lg margin-bottom-0"
                  >
                    Manage users
                  </h1>
                  <div
                    class="desktop:grid-col-auto tablet:grid-col-auto mobile:grid-col-12 margin-top-2 tablet:margin-top-0"
                  >
                    <button
                      aria-disabled="false"
                      aria-label="Clear user search"
                      class="usa-button"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-sliders margin-right-1"
                        data-icon="sliders"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 416c0 17.7 14.3 32 32 32l54.7 0c12.3 28.3 40.5 48 73.3 48s61-19.7 73.3-48L480 448c17.7 0 32-14.3 32-32s-14.3-32-32-32l-246.7 0c-12.3-28.3-40.5-48-73.3-48s-61 19.7-73.3 48L32 384c-17.7 0-32 14.3-32 32zm128 0a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zM320 256a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm32-80c-32.8 0-61 19.7-73.3 48L32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l246.7 0c12.3 28.3 40.5 48 73.3 48s61-19.7 73.3-48l54.7 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-54.7 0c-12.3-28.3-40.5-48-73.3-48zM192 128a32 32 0 1 1 0-64 32 32 0 1 1 0 64zm73.3-64C253 35.7 224.8 16 192 16s-61 19.7-73.3 48L32 64C14.3 64 0 78.3 0 96s14.3 32 32 32l86.7 0c12.3 28.3 40.5 48 73.3 48s61-19.7 73.3-48L480 128c17.7 0 32-14.3 32-32s-14.3-32-32-32L265.3 64z"
                          fill="currentColor"
                        />
                      </svg>
                      Clear filters
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="bg-base-lightest padding-left-3 padding-right-3 padding-bottom-1"
              role="search"
            >
              <div
                class="grid-row grid-gap padding-top-2 padding-bottom-1 flex-align-end"
              >
                <div
                  class="desktop:grid-col-4 tablet:grid-col-4 mobile:grid-col-1"
                >
                  <div
                    class="prime-search-container"
                  >
                    <form
                      class="usa-search usa-search--small prime-search-input display-inline-block"
                      role="search"
                    >
                      <label
                        class="display-block"
                        for="search-field-small"
                      >
                        Search by email address of user
                      </label>
                      <div>
                        <input
                          autocomplete="off"
                          class="usa-input"
                          id="search-field-small"
                          name="search"
                          placeholder="email@example.com"
                          type="search"
                          value="bob@example.com"
                        />
                        <button
                          class="usa-button"
                          type="submit"
                        >
                          <img
                            alt="Search"
                            class="usa-search__submit-icon"
                            src="search--white.svg"
                          />
                        </button>
                      </div>
                    </form>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-live="polite"
            class="prime-container card-container"
          >
            <div
              class="padding-x-3 padding-bottom-205"
            >
              <h2>
                Something went wrong
              </h2>
              Please try again or contact the SimpleReport team for help.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Admin manage users search error displays user is an admin 1`] = `
<body>
  <div>
    <div>
      <div
        class="Toastify"
      />
      <div
        class="prime-home flex-1"
      >
        <div
          class="grid-container"
        >
          <div
            class="prime-container card-container padding-bottom-3"
          >
            <div
              class="usa-card__header"
            >
              <div
                class="width-full"
              >
                <div
                  class="display-flex flex-align-center"
                >
                  <svg
                    aria-hidden="true"
                    class="usa-icon text-base margin-left-neg-2px"
                    focusable="false"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                    />
                  </svg>
                  <a
                    class="margin-left-05"
                    href="/admin"
                  >
                    Support admin
                  </a>
                </div>
                <div
                  class="grid-row width-full margin-top-1"
                >
                  <h1
                    class="desktop:grid-col-fill tablet:grid-col-fill mobile:grid-col-12 font-heading-lg margin-bottom-0"
                  >
                    Manage users
                  </h1>
                  <div
                    class="desktop:grid-col-auto tablet:grid-col-auto mobile:grid-col-12 margin-top-2 tablet:margin-top-0"
                  >
                    <button
                      aria-disabled="false"
                      aria-label="Clear user search"
                      class="usa-button"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-sliders margin-right-1"
                        data-icon="sliders"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 416c0 17.7 14.3 32 32 32l54.7 0c12.3 28.3 40.5 48 73.3 48s61-19.7 73.3-48L480 448c17.7 0 32-14.3 32-32s-14.3-32-32-32l-246.7 0c-12.3-28.3-40.5-48-73.3-48s-61 19.7-73.3 48L32 384c-17.7 0-32 14.3-32 32zm128 0a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zM320 256a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm32-80c-32.8 0-61 19.7-73.3 48L32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l246.7 0c12.3 28.3 40.5 48 73.3 48s61-19.7 73.3-48l54.7 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-54.7 0c-12.3-28.3-40.5-48-73.3-48zM192 128a32 32 0 1 1 0-64 32 32 0 1 1 0 64zm73.3-64C253 35.7 224.8 16 192 16s-61 19.7-73.3 48L32 64C14.3 64 0 78.3 0 96s14.3 32 32 32l86.7 0c12.3 28.3 40.5 48 73.3 48s61-19.7 73.3-48L480 128c17.7 0 32-14.3 32-32s-14.3-32-32-32L265.3 64z"
                          fill="currentColor"
                        />
                      </svg>
                      Clear filters
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="bg-base-lightest padding-left-3 padding-right-3 padding-bottom-1"
              role="search"
            >
              <div
                class="grid-row grid-gap padding-top-2 padding-bottom-1 flex-align-end"
              >
                <div
                  class="desktop:grid-col-4 tablet:grid-col-4 mobile:grid-col-1"
                >
                  <div
                    class="prime-search-container"
                  >
                    <form
                      class="usa-search usa-search--small prime-search-input display-inline-block"
                      role="search"
                    >
                      <label
                        class="display-block"
                        for="search-field-small"
                      >
                        Search by email address of user
                      </label>
                      <div>
                        <input
                          autocomplete="off"
                          class="usa-input"
                          id="search-field-small"
                          name="search"
                          placeholder="email@example.com"
                          type="search"
                          value="admin@example.com"
                        />
                        <button
                          class="usa-button"
                          type="submit"
                        >
                          <img
                            alt="Search"
                            class="usa-search__submit-icon"
                            src="search--white.svg"
                          />
                        </button>
                      </div>
                    </form>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-live="polite"
            class="prime-container card-container"
          >
            <div
              class="padding-x-3 padding-bottom-205"
            >
              <h2>
                Can't determine user identity
              </h2>
              The email address isn't in Okta and can't be displayed. Please escalate the issue to the SimpleReport team.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Admin manage users search error displays user not found 1`] = `
<body>
  <div>
    <div>
      <div
        class="Toastify"
      />
      <div
        class="prime-home flex-1"
      >
        <div
          class="grid-container"
        >
          <div
            class="prime-container card-container padding-bottom-3"
          >
            <div
              class="usa-card__header"
            >
              <div
                class="width-full"
              >
                <div
                  class="display-flex flex-align-center"
                >
                  <svg
                    aria-hidden="true"
                    class="usa-icon text-base margin-left-neg-2px"
                    focusable="false"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                    />
                  </svg>
                  <a
                    class="margin-left-05"
                    href="/admin"
                  >
                    Support admin
                  </a>
                </div>
                <div
                  class="grid-row width-full margin-top-1"
                >
                  <h1
                    class="desktop:grid-col-fill tablet:grid-col-fill mobile:grid-col-12 font-heading-lg margin-bottom-0"
                  >
                    Manage users
                  </h1>
                  <div
                    class="desktop:grid-col-auto tablet:grid-col-auto mobile:grid-col-12 margin-top-2 tablet:margin-top-0"
                  >
                    <button
                      aria-disabled="false"
                      aria-label="Clear user search"
                      class="usa-button"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-sliders margin-right-1"
                        data-icon="sliders"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 416c0 17.7 14.3 32 32 32l54.7 0c12.3 28.3 40.5 48 73.3 48s61-19.7 73.3-48L480 448c17.7 0 32-14.3 32-32s-14.3-32-32-32l-246.7 0c-12.3-28.3-40.5-48-73.3-48s-61 19.7-73.3 48L32 384c-17.7 0-32 14.3-32 32zm128 0a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zM320 256a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm32-80c-32.8 0-61 19.7-73.3 48L32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l246.7 0c12.3 28.3 40.5 48 73.3 48s61-19.7 73.3-48l54.7 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-54.7 0c-12.3-28.3-40.5-48-73.3-48zM192 128a32 32 0 1 1 0-64 32 32 0 1 1 0 64zm73.3-64C253 35.7 224.8 16 192 16s-61 19.7-73.3 48L32 64C14.3 64 0 78.3 0 96s14.3 32 32 32l86.7 0c12.3 28.3 40.5 48 73.3 48s61-19.7 73.3-48L480 128c17.7 0 32-14.3 32-32s-14.3-32-32-32L265.3 64z"
                          fill="currentColor"
                        />
                      </svg>
                      Clear filters
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="bg-base-lightest padding-left-3 padding-right-3 padding-bottom-1"
              role="search"
            >
              <div
                class="grid-row grid-gap padding-top-2 padding-bottom-1 flex-align-end"
              >
                <div
                  class="desktop:grid-col-4 tablet:grid-col-4 mobile:grid-col-1"
                >
                  <div
                    class="prime-search-container"
                  >
                    <form
                      class="usa-search usa-search--small prime-search-input display-inline-block"
                      role="search"
                    >
                      <label
                        class="display-block"
                        for="search-field-small"
                      >
                        Search by email address of user
                      </label>
                      <div>
                        <input
                          autocomplete="off"
                          class="usa-input"
                          id="search-field-small"
                          name="search"
                          placeholder="email@example.com"
                          type="search"
                          value="bad@example.com"
                        />
                        <button
                          class="usa-button"
                          type="submit"
                        >
                          <img
                            alt="Search"
                            class="usa-search__submit-icon"
                            src="search--white.svg"
                          />
                        </button>
                      </div>
                    </form>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-live="polite"
            class="prime-container card-container"
          >
            <div
              class="padding-x-3 padding-bottom-205"
            >
              <h2>
                User not found
              </h2>
              Please check the email address and try the search again, or contact the SimpleReport team for help.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Admin manage users search results matches snapshot 1`] = `
<body>
  <div>
    <div>
      <div
        class="Toastify"
      />
      <div
        class="prime-home flex-1"
      >
        <div
          class="grid-container"
        >
          <div
            class="prime-container card-container padding-bottom-3"
          >
            <div
              class="usa-card__header"
            >
              <div
                class="width-full"
              >
                <div
                  class="display-flex flex-align-center"
                >
                  <svg
                    aria-hidden="true"
                    class="usa-icon text-base margin-left-neg-2px"
                    focusable="false"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                    />
                  </svg>
                  <a
                    class="margin-left-05"
                    href="/admin"
                  >
                    Support admin
                  </a>
                </div>
                <div
                  class="grid-row width-full margin-top-1"
                >
                  <h1
                    class="desktop:grid-col-fill tablet:grid-col-fill mobile:grid-col-12 font-heading-lg margin-bottom-0"
                  >
                    Manage users
                  </h1>
                  <div
                    class="desktop:grid-col-auto tablet:grid-col-auto mobile:grid-col-12 margin-top-2 tablet:margin-top-0"
                  >
                    <button
                      aria-disabled="false"
                      aria-label="Clear user search"
                      class="usa-button"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-sliders margin-right-1"
                        data-icon="sliders"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 416c0 17.7 14.3 32 32 32l54.7 0c12.3 28.3 40.5 48 73.3 48s61-19.7 73.3-48L480 448c17.7 0 32-14.3 32-32s-14.3-32-32-32l-246.7 0c-12.3-28.3-40.5-48-73.3-48s-61 19.7-73.3 48L32 384c-17.7 0-32 14.3-32 32zm128 0a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zM320 256a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm32-80c-32.8 0-61 19.7-73.3 48L32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l246.7 0c12.3 28.3 40.5 48 73.3 48s61-19.7 73.3-48l54.7 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-54.7 0c-12.3-28.3-40.5-48-73.3-48zM192 128a32 32 0 1 1 0-64 32 32 0 1 1 0 64zm73.3-64C253 35.7 224.8 16 192 16s-61 19.7-73.3 48L32 64C14.3 64 0 78.3 0 96s14.3 32 32 32l86.7 0c12.3 28.3 40.5 48 73.3 48s61-19.7 73.3-48L480 128c17.7 0 32-14.3 32-32s-14.3-32-32-32L265.3 64z"
                          fill="currentColor"
                        />
                      </svg>
                      Clear filters
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="bg-base-lightest padding-left-3 padding-right-3 padding-bottom-1"
              role="search"
            >
              <div
                class="grid-row grid-gap padding-top-2 padding-bottom-1 flex-align-end"
              >
                <div
                  class="desktop:grid-col-4 tablet:grid-col-4 mobile:grid-col-1"
                >
                  <div
                    class="prime-search-container"
                  >
                    <form
                      class="usa-search usa-search--small prime-search-input display-inline-block"
                      role="search"
                    >
                      <label
                        class="display-block"
                        for="search-field-small"
                      >
                        Search by email address of user
                      </label>
                      <div>
                        <input
                          autocomplete="off"
                          class="usa-input"
                          id="search-field-small"
                          name="search"
                          placeholder="email@example.com"
                          type="search"
                          value="ben@example.com"
                        />
                        <button
                          class="usa-button"
                          type="submit"
                        >
                          <img
                            alt="Search"
                            class="usa-search__submit-icon"
                            src="search--white.svg"
                          />
                        </button>
                      </div>
                    </form>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-live="polite"
            class="prime-container card-container manage-users-card"
          >
            <div
              class="usa-card__body"
            >
              <div
                class="tablet:grid-col padding-left-3 user-detail-column"
              >
                <div>
                  <h2
                    class="display-inline-block margin-top-1 margin-bottom-0 user-name-header"
                  >
                    Barnes, Ben Billy
                  </h2>
                  <div
                    class="user-status-subheader"
                  >
                    <span
                      class="top-user-status padding-left-0"
                    />
                  </div>
                </div>
                <div
                  aria-label="Alert: No facility assigned"
                  class="usa-alert usa-alert--warning"
                  role="region"
                >
                  <div
                    class="usa-alert__body"
                  >
                    <div
                      class="usa-alert__heading text-bold"
                    >
                      No facility assigned
                    </div>
                    <div
                      class="usa-alert__text"
                    >
                      All users must have access to at least one facility
                    </div>
                  </div>
                </div>
                <nav
                  aria-label="Manage user navigation"
                  class="prime-secondary-nav margin-top-4 padding-bottom-0"
                >
                  <div
                    aria-owns="userinformation-tab orgaccess-tab"
                    class="usa-nav__secondary-links prime-nav usa-list"
                    role="tablist"
                  >
                    <div
                      class="usa-nav__secondary-item usa-current"
                    >
                      <button
                        aria-selected="true"
                        class="usa-button--unstyled text-ink text-no-underline cursor-pointer"
                        id="userinformation-tab"
                        role="tab"
                      >
                        User information
                      </button>
                    </div>
                    <div
                      class="usa-nav__secondary-item "
                    >
                      <button
                        aria-selected="false"
                        class="usa-button--unstyled text-ink text-no-underline cursor-pointer"
                        id="organizationaccess-tab"
                        role="tab"
                      >
                        Organization access
                      </button>
                    </div>
                  </div>
                </nav>
                <div
                  aria-labelledby="userinformation-tab"
                  class="padding-left-1"
                  role="tabpanel"
                >
                  <h3
                    class="basic-info-header"
                  >
                    Basic information
                  </h3>
                  <div
                    class="user-header grid-row flex-row flex-align-center"
                  >
                    <div>
                      <div
                        class="userinfo-subheader"
                      >
                        Name
                      </div>
                      <p
                        class="userinfo-text"
                      >
                        Ben Billy Barnes
                      </p>
                    </div>
                    <button
                      aria-disabled="false"
                      class="usa-button usa-button--outline margin-left-auto margin-bottom-1"
                      type="button"
                    >
                      Edit name
                    </button>
                  </div>
                  <div
                    class="user-header grid-row flex-row flex-align-center"
                  >
                    <div>
                      <div
                        class="userinfo-subheader"
                      >
                        Email
                      </div>
                      <p
                        class="userinfo-text"
                      >
                        ben@example.com
                      </p>
                    </div>
                    <button
                      aria-disabled="false"
                      class="usa-button usa-button--outline margin-left-auto margin-bottom-1"
                      type="button"
                    >
                      Edit email
                    </button>
                  </div>
                  <div
                    class="sr-separator-line margin-left-neg-4 margin-right-neg-2"
                  />
                  <h3
                    class="user-controls-header"
                  >
                    User controls
                  </h3>
                  <div
                    class="user-header grid-row flex-row flex-align-center"
                  >
                    <div
                      class="grid-col margin-right-8"
                    >
                      <div
                        class="userinfo-subheader"
                      >
                        Password
                      </div>
                      <p
                        class="usercontrols-text"
                      >
                        Send a link to reset user password. Users must answer a password recovery question to access their account.
                      </p>
                    </div>
                    <button
                      aria-disabled="false"
                      class="usa-button usa-button--outline margin-left-auto margin-bottom-1"
                      type="button"
                    >
                      Send password reset email
                    </button>
                  </div>
                  <div
                    class="user-header grid-row flex-row flex-align-center"
                  >
                    <div
                      class="grid-col"
                    >
                      <div
                        class="userinfo-subheader"
                      >
                        Reset multi-factor authentication (MFA)
                      </div>
                      <p
                        class="usercontrols-text"
                      >
                        Reset user MFA account access settings
                      </p>
                    </div>
                    <button
                      aria-disabled="false"
                      class="usa-button usa-button--outline margin-left-auto margin-bottom-1"
                      type="button"
                    >
                      Reset MFA
                    </button>
                  </div>
                  <div
                    class="user-header grid-row flex-row flex-align-center"
                  >
                    <div>
                      <div
                        class="userinfo-subheader"
                      >
                        Delete user
                      </div>
                      <p
                        class="usercontrols-text"
                      >
                        Permanently delete user account and data
                      </p>
                    </div>
                    <button
                      class="usa-button usa-button--outline margin-left-auto margin-bottom-1"
                      type="button"
                    >
                      Delete user
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="modal--basic"
  />
</body>
`;
